// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationDrawer /> should switch themes 1`] = `
<div
  class="MuiDrawer-root-539 MuiDrawer-docked-540 NavigationDrawer-drawer-537"
  data-testid="navigation-drawer"
>
  <div
    class="MuiPaper-root-551 MuiPaper-elevation0-553 MuiDrawer-paper-541 NavigationDrawer-drawerPaper-538 MuiDrawer-paperAnchorLeft-542 MuiDrawer-paperAnchorDockedLeft-546"
    direction="right"
  >
    <div
      class="Component-loading-578"
    >
      <div
        class="MuiCircularProgress-root-579 MuiCircularProgress-colorPrimary-582 MuiCircularProgress-indeterminate-581"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg-584"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle-585 MuiCircularProgress-circleIndeterminate-587"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NavigationDrawer /> should switch themes 2`] = `
<div
  class="MuiDrawer-root-616 MuiDrawer-docked-617 NavigationDrawer-drawer-628"
  data-testid="navigation-drawer"
>
  <div
    class="MuiPaper-root-589 MuiPaper-elevation0-591 MuiDrawer-paper-618 NavigationDrawer-drawerPaper-629 MuiDrawer-paperAnchorLeft-619 MuiDrawer-paperAnchorDockedLeft-623"
    direction="right"
  >
    <div
      class="Component-loading-640"
    >
      <div
        class="MuiCircularProgress-root-630 MuiCircularProgress-colorPrimary-633 MuiCircularProgress-indeterminate-632"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg-635"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle-636 MuiCircularProgress-circleIndeterminate-638"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
